# fastflows-backend

./: README.md  app.py  auth.py  pyproject.toml  requirements.txt  vercel.json
llmsdd/: .gitignore  LICENSE  README.md  pyproject.toml  test_oai.py  test_piechart_prompt_manager.py  test_session.py
llmsdd/core/: __init__.py  instructions.py  prompt.py  prompt_history.py  prompt_manager.py
llmsdd/interfaces/: __init__.py  oai_models.py  openai.py
llmsdd/llmsdd/core/: prompt_manager.py  schema.py
llmsdd/llmsdd/interfaces/: oai_models.py  openai.py
llmsdd/llmsdd/mermaid/flowchart/schemas/: flowchart.py
llmsdd/llmsdd/mermaid/piechart/: pie_chart_prompt.py  pie_chart_prompt_manager_backup.py  pie_chart_schema.py
llmsdd/mermaid/flowchart/schemas/: edge.py  node.py  subgraph.py
llmsdd/mermaid/flowchart/types/: enums.py
llmsdd/mermaid/piechart/: __init__.py  pie_chart_prompt.py  pie_chart_schema.py
llmsdd/tui/: __init__.py  session.py  session_app.py
models/: auth.py  chart.py  piechart.py  prompt.py  response.py
routes/: chart.py  piechart.py  prompt.py  response.py  transcribe.py  user.py
src/: chart.py  client.py  prompt.py  response.py  user.py
supabase/: config.toml
supabase/migrations/: 20230603064753_create_charts_table.sql  20230603065209_create_prompts_table.sql  20230603065313_create_responses_table.sql
