[tool.poetry]
name = "fastflows-backend"
version = "0.1.0"
description = ""
authors = ["adimyth <mishraaditya6991@gmail.com>"]
readme = "README.md"
packages = [{include = "fastflows_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
supabase = "^1.0.3"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
openai = "^0.27.7"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
