[tool.poetry]
name = "llmsdd"
version = "0.1.0"
description = ""
authors = ["Soumendra Dhanee <soumendra@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.8"
openai = "^0.27.7"
mermaid = "^0.3.2"
rich = "^13.3.5"
textual = "^0.26.0"
loguru = "^0.7.0"
msgpack = "^1.0.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
